syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.models";


message BankServiceRequest {
  int32 account_number = 1;
}

message WithdrawRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

message DepositRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

message Balance {
  int32 balance = 1;
}

message Money {
  int32 value = 1;
}
service BankService{
  rpc getBalance(BankServiceRequest) returns (Balance);
  rpc withdrawMoney(WithdrawRequest) returns (stream Money);
  rpc depositMoney(stream DepositRequest) returns (Balance);
}